design bug fixed footer social media icon alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -641,6 +641,8 @@ button.owl-dot.active {
     color: #EEEEEE;
     text-decoration: none;
     text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 600;
 }
 .footer-logo {
     margin-bottom: 16px;
@@ -651,6 +653,13 @@ button.owl-dot.active {
     font-weight: 600;
     line-height: 32px;
     color: #EEEEEE;
+}
+.social-media-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 ul.social-media-icon {
     display: flex;
